Fusion de graphes et graphesMat : interfaçage du concept de liste/matrice d'adjacence

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,28 +1,57 @@
-#[[
-    Pour build le projet :
-        mkdir build
-        cd build
-        cmake ..
-    
-    Pour générer les executables :
-        make EXECUTABLE
-    
-    Les EXECUTABLES sont :
-        draw    : dessine un hexagone à l'écran
-        genPerf : génère les données de mesures de performances dans data/perf.dat 
+string(ASCII 27 ESCAPE)
+message("${ESCAPE}[1;36m")
+message(" =================================== BUILD ===================================")
+message("
+    Pour constuire le projet :  
+    ```
+        mkdir build  
+        cd build  
+        cmake ..  
+    ```
+    Pour construire tout les exectuables : `make`  
 
-    Autre :
-        make plot   : génère l'image perf.png et l'affiche
-        ctest       : execute tout les tests du projet
-        clean       : supprime les executables
-]]
+")
+message(" ======================== LISTE DES EXECUTABLES ET MACRO ========================")
+message("
+    ## Liste des executables
+    Tout les executables vont être dans le répertoire build.  
+    * draw    : dessine un hexagone à l'écran  
+    * genPerf : génère les données de mesures de performances dans data/perf.dat   
+            : taille du graphe maximale prise à 50 par défaut, mais est spécifiable par : ./genPerf [Taille Maximale]
+    ## Liste des macros
+    Taper les commandes suivantes pour leur effet:  
+    * make plot : génère l'image perf.png et l'affiche  
+    * ctest     : execute tuot les tests du projet  
+    * clean     : supprime les executables  
+")
+message(" ============================== STRUCTURE DU PROJET ==============================")
+message("
+    La hiérarchie est la suivante :
+    * graphes : librairie de manipulation de graphe
+        * include :
+            * graphes.hpp       : header de la structure Graph
+            * graphesImpl.hpp   : implémentation de graphes (dans un .hpp parce que c'est une structure template)
+            * adj.hpp           : contient l'interface d'une liste/matrice d'adjacence
+            * suffixTree.hpp    : header de la structure d'arbre de suffix
+            * visualisation.hpp : contient l'implémentation de Graph::draw()
+        * src :
+            * suffixTree.cpp    : implémentation de l'arbre de suffix
+    * tests : 
+        * src : contient les tests de chaque fonction
+    * data  : contient les scripts et données relatifs au plot
+    * *files*.cpp : code executif faisant appel aux librairies
+")
+message("${ESCAPE}[0m")
+
+
 
 cmake_minimum_required(VERSION 3.12)
 project(MaxBicliqueEnumeration VERSION 0.1.0) 
 
+
 # Build la librairie "graphes"
-add_subdirectory(graphes)      # Version avec Liste d'Adjacence
-add_subdirectory(graphesMat)   # Version avec Matrice d'Adjacence
+add_subdirectory(graphes)
+
 
 # Génère les tests  : la commande "ctest" permet de lancer tout les tests
 enable_testing()
@@ -36,7 +65,7 @@ find_package(SDL2 REQUIRED)
 
 # Génère les mesures de performances moyénnées de la fonction getBicliques pour des tailles variables
 add_executable(genPerf ${CMAKE_SOURCE_DIR}/genPerf.cpp)
-target_link_libraries(genPerf graphes graphesMat OpenMP::OpenMP_CXX SDL2)
+target_link_libraries(genPerf graphes OpenMP::OpenMP_CXX SDL2)
 target_compile_options(genPerf PUBLIC -std=c++17)
 
 
@@ -46,32 +75,5 @@ target_link_libraries(draw graphes OpenMP::OpenMP_CXX SDL2)
 target_compile_options(draw PUBLIC -std=c++17)
 
 
-# Executable qui dessine un hexagone à l'écran VERSION MATRICE D'ADJACENCE
-add_executable(drawMat ${CMAKE_SOURCE_DIR}/drawMat.cpp)
-target_link_libraries(drawMat graphesMat OpenMP::OpenMP_CXX SDL2)
-target_compile_options(drawMat PUBLIC -std=c++17)
-
-
-
 # "make plot" va afficher le graphe des perfs
 add_custom_target(plot COMMAND sh ../data/plot.sh)
-
-string(ASCII 27 ESCAPE)
-message("${ESCAPE}[1;36m ============================ STRUCTURE DU PROJET ============================ ")
-message("Pour build le projet :")
-message("      - mkdir build")
-message("      - cd build")
-message("      - cmake ..")
-message("      - make")
-message(" Ceci aura pour effet de construire tout les executables du projet dans le nouveau répertoire -bin-")
-message("")
-message("Liste de tout les executables")
-message("      - draw    : dessine un hexagone à l ecran")
-message("      - genPerf : génère les données de mesures de performances dans data/perf.dat")
-message("")
-message("Liste des macro")
-message("      - make plot : génère l'image perf.png et l affiche")
-message("      - ctest     : execute tout les tests du projet")
-message("      - clean     : supprime les executables")
-message("================================================================================${ESCAPE}[0m")
-
