README.md : explication sur l'utilisation de la librairie

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,9 +20,9 @@ message("
             : taille du graphe maximale prise à 50 par défaut, mais est spécifiable par : ./genPerf [Taille Maximale]
     ## Liste des macros
     Taper les commandes suivantes pour leur effet:  
-    * make plot : génère l'image perf.png et l'affiche  
-    * ctest     : execute tuot les tests du projet  
-    * clean     : supprime les executables  
+    * make plot   : génère l'image perf.png et l'affiche  
+    * ctest       : execute tout les tests du projet  
+    * make clean  : supprime les executables  
 ")
 message(" ============================== STRUCTURE DU PROJET ==============================")
 message("
@@ -40,6 +40,17 @@ message("
         * src : contient les tests de chaque fonction
     * data  : contient les scripts et données relatifs au plot
     * *files*.cpp : code executif faisant appel aux librairies
+")
+message(" ========================= UTILISATION DE LA LIBRAIRIE ==========================")
+message("
+    * Générer un graphe :
+        * aléatoirement :
+            * Forme Liste d'Adjacence   : ̀`Graph<Lst> g = genRandGraph<Lst>(Taille)`
+            * Forme Matrice d'Adjacence : ̀`Graph<Mat> g = genRandGraph<Mat>(Taille)`
+        * prédéfini     :
+            * Molécule de Méthane  : `Graph<Lst> g = Méthane<Lst>();`
+    * Manipulation d'un graphe :
+        * Obtenir ses bicliques maximales : `std::set<std::set<u64>> bicliques = g.getBicliques()`
 ")
 message("${ESCAPE}[0m")
 
