Added cpp20 standard requirement

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ project(MaxBicliqueEnumeration VERSION 0.1.0 LANGUAGES CXX)
 find_package(OpenMP REQUIRED)
 find_package(SDL2 REQUIRED)
 
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
 
 add_subdirectory(extern)
