--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,12 @@
 
 set(CMAKE_CURRENT_INCLUDE_DIR ${INCLUDE_DIR})
 add_library(Graph STATIC 
-    graphLst.cpp ${INCLUDE_DIR}/grapheLst.hpp
-    graphMat.cpp ${INCLUDE_DIR}/grapheMat.hpp
-    StructGraph.cpp ${INCLUDE_DIR}/StructGraph.hpp
-    suffixTree.cpp ${INCLUDE_DIR}/suffixTree.hpp
-    visualisation.cpp
+    GraphList.cpp ${INCLUDE_DIR}/GraphList.hpp
+    GraphMat.cpp ${INCLUDE_DIR}/GraphMat.hpp
+    Graph.cpp ${INCLUDE_DIR}/Graph.hpp
+    SuffixTree.cpp ${INCLUDE_DIR}/SuffixTree.hpp
+    Visualisation.cpp
 )
+
 target_link_libraries(Graph PUBLIC SDL2 OpenMP::OpenMP_CXX)
 target_include_directories(Graph PUBLIC ${CMAKE_CURRENT_INCLUDE_DIR})
