Performances Scripts (parallelise)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 3.12)
-project(MaxBicliqueEnumeration VERSION 0.1.0 LANGUAGES CXX)
+project(
+  MaxBicliqueEnumeration
+  VERSION 0.1.0
+  LANGUAGES CXX)
 
 # Find dependencies
 find_package(OpenMP REQUIRED)
@@ -14,10 +17,9 @@ add_subdirectory(extern)
 # Build la librairie "graphes"
 add_subdirectory(src)
 add_subdirectory(apps)
-  
+
 enable_testing()
 add_subdirectory(test)
 
-
 # "make plot" va afficher le graphe des perfs
-add_custom_target(plot COMMAND sh ../data/plot.sh)
+add_custom_target(plot COMMAND sh ../plot/plot.sh)
