--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,5 +1,4 @@
 
-
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
@@ -9,3 +8,6 @@ target_link_libraries(draw PUBLIC Graph)
 
 add_executable(genPerf genPerf.cpp)
 target_link_libraries(genPerf PUBLIC Graph)
+
+add_executable(readFile readFile.cpp)
+target_link_libraries(readFile PUBLIC Graph)
