Tests/Etudes de performances

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,4 +1,3 @@
-
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
@@ -11,3 +10,7 @@ target_link_libraries(genPerf PUBLIC Graph)
 
 add_executable(readFile readFile.cpp)
 target_link_libraries(readFile PUBLIC Graph)
+
+add_executable(getBicliques getBicliques.cpp)
+target_link_libraries(getBicliques PUBLIC Graph)
+target_compile_options(getBicliques PUBLIC -Ofast)
