--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,3 +17,4 @@ add_library(
 
 target_link_libraries(Graph PUBLIC SDL2 OpenMP::OpenMP_CXX)
 target_include_directories(Graph PUBLIC ${CMAKE_CURRENT_INCLUDE_DIR})
+target_compile_options(Graph PUBLIC -Ofast)
