Changements relatifs à Bron-Kerbosch

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -17,3 +17,6 @@ target_compile_options(getBicliques PUBLIC -ggdb3 -Ofast)
 
 add_executable(complementary complementary.cpp)
 target_link_libraries(complementary PUBLIC Graph)
+
+add_executable(bron-kerbosch Bron-Kerbosch.cpp)
+target_link_libraries(bron-kerbosch PUBLIC Graph)
