--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,2 +1,6 @@
 
-add_subdirectory(graph)
+add_executable(Graph_Tests Graph_Tests.cpp)
+target_link_libraries(Graph_Tests Graph gtest_main)
+
+include(GoogleTest)
+gtest_discover_tests(Graph_Tests)
